fixed list function not being supported, removed not needed imports